Add demuxlet/freemuxlet optional params

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -150,7 +150,26 @@ process {
     }
 
     withName: POPSCLE_DEMUXLET {
-        ext.args   = '--field GT'
+        ext.args   = {
+            [
+                "--field",
+                params.demuxlet_field,
+                "--geno-error-offset",
+                params.demuxlet_geno_error_offset,
+                "--geno-error-coeff",
+                params.demuxlet_geno_error_coeff,
+                "--r2-info",
+                params.demuxlet_r2_info,
+                "--min-mac",
+                params.demuxlet_min_mac,
+                "--min-callrate",
+                params.demuxlet_min_callrate,
+                "--alpha",
+                params.demuxlet_alpha,
+                "--doublet-prior",
+                params.demuxlet_doublet_prior,
+            ].join(" ")
+        }
         publishDir = [
             path: { "${params.outdir}/genetic/popscle/demuxlet/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -159,6 +178,24 @@ process {
     }
 
     withName: POPSCLE_FREEMUXLET {
+        ext.args   = {
+            [
+                "--doublet-prior",
+                params.freemuxlet_doublet_prior,
+                "--geno-error",
+                params.freemuxlet_geno_error,
+                "--bf-thres",
+                params.freemuxlet_bf_thres,
+                "--frac-init-clust",
+                params.freemuxlet_frac_init_clust,
+                "--iter-init",
+                params.freemuxlet_iter_init,
+                params.freemuxlet_keep_init_missing ? "--keep-init-missing" : "",
+                params.freemuxlet_randomize_singlet_score ? "--randomize-singlet-score" : "",
+                "--seed",
+                params.freemuxlet_seed,
+            ].join(" ")
+        }
         publishDir = [
             path: { "${params.outdir}/genetic/popscle/freemuxlet/${meta.id}" },
             mode: params.publish_dir_mode,
