--- a/nextflow.config
+++ b/nextflow.config
@@ -11,102 +11,122 @@ params {
 
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                        = null
-    mode                         = 'rescue'
-    match_donor                  = false
-    hash_tools                   = 'gmm-demux'
-    genetic_tools                = 'vireo'
-    bam_qc                       = true
-    common_variants              = null
-    save_intermediates           = false
+    input                              = null
+    mode                               = 'rescue'
+    match_donor                        = false
+    hash_tools                         = 'gmm-demux'
+    genetic_tools                      = 'vireo'
+    bam_qc                             = true
+    common_variants                    = null
+    save_intermediates                 = false
 
     // References
-    genome                       = null
-    igenomes_base                = 's3://ngi-igenomes/igenomes/'
-    igenomes_ignore              = false
+    genome                             = null
+    igenomes_base                      = 's3://ngi-igenomes/igenomes/'
+    igenomes_ignore                    = false
 
     // demuxEM
-    demuxem_alpha_on_samples     = 0.0
-    demuxem_min_num_genes        = 100
-    demuxem_min_num_umis         = 100
-    demuxem_min_signal_hashtag   = 10
-    demuxem_random_state         = 0
-    demuxem_gender_genes         = ""
+    demuxem_alpha_on_samples           = 0.0
+    demuxem_min_num_genes              = 100
+    demuxem_min_num_umis               = 100
+    demuxem_min_signal_hashtag         = 10
+    demuxem_random_state               = 0
+    demuxem_gender_genes               = ""
 
     // GMM-Demux
-    gmmdemux_extract             = null
-    gmmdemux_threshold           = 0.8
-    gmmdemux_random_state        = 0
+    gmmdemux_extract                   = null
+    gmmdemux_threshold                 = 0.8
+    gmmdemux_random_state              = 0
 
     // CellSNP
-    cellsnp_celltag              = 'CB'
-    cellsnp_umitag               = 'Auto'
-    cellsnp_mincount             = 20
-    cellsnp_minmaf               = 0.0
-    cellsnp_inclflag             = ""
-    cellsnp_exclflag             = ""
-    cellsnp_minlen               = 30
-    cellsnp_minmapq              = 20
-    cellsnp_maxdepth             = 0
-    cellsnp_countorphan          = false
+    cellsnp_celltag                    = 'CB'
+    cellsnp_umitag                     = 'Auto'
+    cellsnp_mincount                   = 20
+    cellsnp_minmaf                     = 0.0
+    cellsnp_inclflag                   = ""
+    cellsnp_exclflag                   = ""
+    cellsnp_minlen                     = 30
+    cellsnp_minmapq                    = 20
+    cellsnp_maxdepth                   = 0
+    cellsnp_countorphan                = false
 
     // Vireo
-    vireo_genotag                = 'GT'
-    vireo_no_doublet             = false
-    vireo_n_init                 = 50
-    vireo_extra_donor            = 0
-    vireo_extra_donor_mode       = 'distance'
-    vireo_force_learn_gt         = false
-    vireo_ase_mode               = false
-    vireo_no_plot                = false
-    vireo_rand_seed              = 0
-    vireo_cell_range             = 'all'
-    vireo_cell_ambient_rnas      = false
+    vireo_genotag                      = 'GT'
+    vireo_no_doublet                   = false
+    vireo_n_init                       = 50
+    vireo_extra_donor                  = 0
+    vireo_extra_donor_mode             = 'distance'
+    vireo_force_learn_gt               = false
+    vireo_ase_mode                     = false
+    vireo_no_plot                      = false
+    vireo_rand_seed                    = 0
+    vireo_cell_range                   = 'all'
+    vireo_cell_ambient_rnas            = false
 
     // DSC-Pileup
-    dsc_pileup_tag_group         = 'CB'
-    dsc_pileup_tag_umi           = 'UB'
-    dsc_pileup_cap_bq            = 40
-    dsc_pileup_min_bq            = 13
-    dsc_pileup_min_mq            = 20
-    dsc_pileup_min_td            = 0
-    dsc_pileup_excl_flag         = 3844
-    dsc_pileup_min_total         = 0
-    dsc_pileup_min_uniq          = 0
-    dsc_pileup_min_snp           = 0
+    dsc_pileup_tag_group               = 'CB'
+    dsc_pileup_tag_umi                 = 'UB'
+    dsc_pileup_cap_bq                  = 40
+    dsc_pileup_min_bq                  = 13
+    dsc_pileup_min_mq                  = 20
+    dsc_pileup_min_td                  = 0
+    dsc_pileup_excl_flag               = 3844
+    dsc_pileup_min_total               = 0
+    dsc_pileup_min_uniq                = 0
+    dsc_pileup_min_snp                 = 0
+
+    // Demuxlet
+    demuxlet_field                     = 'GT'
+    demuxlet_geno_error_offset         = 0.1
+    demuxlet_geno_error_coeff          = 0.0
+    demuxlet_r2_info                   = 'R2'
+    demuxlet_min_mac                   = 1
+    demuxlet_min_callrate              = 0.50
+    demuxlet_alpha                     = '0.1,0.2,0.3,0.4,0.5'
+    demuxlet_doublet_prior             = 0.5
+
+    // Freemuxlet
+    freemuxlet_doublet_prior           = 0.5
+    freemuxlet_geno_error              = 0.1
+    freemuxlet_bf_thres                = 5.41
+    freemuxlet_frac_init_clust         = 1.0
+    freemuxlet_iter_init               = 10
+    freemuxlet_keep_init_missing       = false
+    freemuxlet_randomize_singlet_score = false
+    freemuxlet_seed                    = 0
 
     // MultiQC options
-    multiqc_config               = null
-    multiqc_title                = null
-    multiqc_logo                 = null
-    max_multiqc_email_size       = '25.MB'
-    multiqc_methods_description  = null
+    multiqc_config                     = null
+    multiqc_title                      = null
+    multiqc_logo                       = null
+    max_multiqc_email_size             = '25.MB'
+    multiqc_methods_description        = null
 
     // Boilerplate options
-    outdir                       = null
-    publish_dir_mode             = 'copy'
-    email                        = null
-    email_on_fail                = null
-    plaintext_email              = false
-    monochrome_logs              = false
-    hook_url                     = null
-    help                         = false
-    help_full                    = false
-    show_hidden                  = false
-    version                      = false
-    pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
-    trace_report_suffix          = new java.util.Date().format('yyyy-MM-dd_HH-mm-ss')
+    outdir                             = null
+    publish_dir_mode                   = 'copy'
+    email                              = null
+    email_on_fail                      = null
+    plaintext_email                    = false
+    monochrome_logs                    = false
+    hook_url                           = null
+    help                               = false
+    help_full                          = false
+    show_hidden                        = false
+    version                            = false
+    pipelines_testdata_base_path       = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
+    trace_report_suffix                = new java.util.Date().format('yyyy-MM-dd_HH-mm-ss')
     // Config options
-    config_profile_name          = null
-    config_profile_description   = null
+    config_profile_name                = null
+    config_profile_description         = null
 
-    custom_config_version        = 'master'
-    custom_config_base           = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
-    config_profile_contact       = null
-    config_profile_url           = null
+    custom_config_version              = 'master'
+    custom_config_base                 = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
+    config_profile_contact             = null
+    config_profile_url                 = null
 
     // Schema validation default options
-    validate_params              = true
+    validate_params                    = true
 }
 
 // Load base.config by default for all pipelines
